# cc-3

./: .gitignore  20260208.md  README.md  design.md  main.py  pyproject.toml  stop.sh  项目分析.md
agents/demo/: agent.yaml  policies.md  system_prompt.md
apps/chat_api/: requirements.txt
apps/chat_api/cc3_chat_api/: __init__.py  auth.py  bootstrap.py  main.py  routes.py  run_manager.py  sse_routes.py  storage.py
apps/chat_frontend/: index.html  package.json
apps/chat_frontend/src/: App.jsx  api.js  styles.css
src/cc3/: __init__.py  claude_cmd.py  cli.py  config.py  events.py  executor.py  locking.py  paths.py  runner.py  scaffold.py  session.py  stream_parser.py
src/cc3/orchestrator/: __init__.py  graph.py
src/cc_3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_events.py  test_executor.py  test_locking.py  test_session.py  test_stream_parser.py
workspaces/users/alice/conversations/c59bf510b12d4e588f6f19905ba09a67/: conversation.json  messages.ndjson  session.json
workspaces/users/alice/conversations/c59bf510b12d4e588f6f19905ba09a67/runs/1770607003-71beff4d/: meta.json  status.json  step.json
workspaces/users/alice/conversations/c59bf510b12d4e588f6f19905ba09a67/runs/1770607037-42f70141/: meta.json  status.json  step.json
workspaces/users/alice/conversations/e5da46bfcc56407fa89be3656104d2af/: conversation.json  messages.ndjson  session.json
workspaces/users/bob/conversations/0cda6d38078f458a999cebbfc204c61c/: conversation.json  session.json
