[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-3"
version = "0.1.0"
description = "LangGraph orchestrator + Claude Code CLI executor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "filelock>=3.13",
  "pyyaml>=6.0",
  "typer>=0.12",
  "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cc3 = "cc3.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
